<resources>
    <string name="app_name">TFMMusic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="view_count_k">K views</string>
    <string name="view_count">views</string>
    <string name="view_count_m">"M views "</string>
    <string name="view_count_b">"B view "</string>
    <string name="song">Song</string>
    <string name="singer">Singer</string>
    <string name="album">Album</string>
    <string name="folder">Folder</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="feedback">Feedback</string>
    <string name="background">Background running</string>
    <string name="userAgreement">User Agreement</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="autoUpdate">Auto Update</string>
    <string name="playLater">Play Later</string>
    <string name="addToList">Add to list</string>
    <string name="addToPlayList">Add to Player List</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="pleaseEnterListName">Please enter List Name</string>
    <string name="listNameAlreadyExists">List name already exists</string>
    <string name="addToPlaylist">Add to playlist</string>
    <string name="newList">New list</string>
    <string name="ph_t_ng_u_nhi_n">Phát ngẫu nhiên</string>
    <string name="favourite">Favourite</string>
    <string name="recent">Recent</string>
    <string name="play_list">Play List</string>
    <string name="now_playing">Now playing</string>
    <string name="search">Search</string>
    <string name="recently_played">Recently played</string>
    <string name="request">Request</string>
    <string name="v_n_rung">Vân rung</string>
    <string name="madihu">Madihu</string>
    <string name="kidsai">kidsai</string>
    <string name="similar_videos">Similar Videos</string>
    <string name="_500">500+</string>
    <string name="my_music">My music</string>
    <string name="see">See</string>
    <string name="comment">Comment</string>
    <string name="most_prominent">Most prominent</string>
    <string name="latest">Latest</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="_0">0</string>
    <string name="no_play_list">No play list</string>
    <string name="no_song">No songs</string>
    <string name="no_recently_played_songs">No recently played songs</string>
    <string name="random_play">Random play</string>
    <string name="create_playlists">Create playlists</string>
    <string name="playlist_name">Playlist name</string>
    <string name="enter_playlist_name">Enter playlist name</string>
    <string name="play_list_name">Play list name</string>
    <string name="year_ago">year ago</string>
    <string name="mon_ago">mon ago</string>
    <string name="day_ago">day ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="minute_ago">minute ago</string>
    <string name="dap_an_cuoi_cung">Dap an cuoi cung</string>
    <string name="quan_a_p">Quan A. P</string>
    <string name="music">Music</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="maxProgress">maxProgress</string>
    <string name="progress">progress</string>
    <string name="textViewStartTime">textViewStartTime</string>
    <string name="textViewEndTime">textViewEndTime</string>
    <string name="KillAPP">KillAPP</string>
    <string name="sort_songs">Sort songs</string>
    <string name="by_the_time">By the time</string>
    <string name="by_name">By name</string>
    <string name="no_data_favorite">No data favorite</string>
    <string name="history">History</string>
    <string name="hello">Hello</string>
    <string name="name_song">Name song</string>
    <string name="namesong">nameSong</string>
    <string name="seek_to">SEEK_TO</string>
    <string name="success">Success</string>
    <string name="no_add">No add</string>
    <string name="_5">5</string>
    <string name="delete_recent_playlist">Delete recent playlist</string>
    <string name="do_you_want_to_delete_recently_played_song">Do you want to delete recently played song</string>
    <string name="app_active">App Active</string>
    <string name="app_active_channel">app_active_channel</string>
    <string name="ticker">ticker</string>


</resources>