<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_baseline_language_24"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/music_video_72"
            android:title="@string/background" />
        <item
            android:id="@+id/nav_userAgreement"
            android:icon="@drawable/ic_baseline_feed_24"
            android:title="@string/userAgreement" />
        <item
            android:id="@+id/nav_privacyPolicy"
            android:icon="@drawable/ic_baseline_privacy_tip_24"
            android:title="@string/privacyPolicy" />

    </group>

</menu>