<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#10000000">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/custom_rounded_dialog">
            <TextView
                android:id="@+id/tv_nameSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/name_song"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/addToPlayList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_ripple_item_music"
                android:padding="10dp"
                android:text="@string/addToPlayList"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tv_nameSong" />


            <TextView
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_ripple_item_music"
                android:padding="10dp"
                android:text="@string/delete"

                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/addToPlayList" />


            <TextView
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_ripple_item_music"
                android:padding="10dp"
                android:text="@string/share"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/delete" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>