<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#10000000">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/custom_rounded_dialog">


            <TextView
                android:id="@+id/tv_sort_songs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/sort_songs"

                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/by_the_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/custom_ripple_item_music"
                android:padding="10dp"
                android:text="@string/by_the_time"
                android:layout_marginTop="10dp"

                android:textColor="@color/black"

                app:layout_constraintTop_toBottomOf="@+id/tv_sort_songs" />


            <TextView
                android:id="@+id/by_the_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_ripple_item_music"

                android:padding="10dp"
                android:text="@string/by_name"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/by_the_time" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>