<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/im_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="5dp"
            android:background="@drawable/custom_ripple_image"


            app:layout_constraintLeft_toLeftOf="@+id/rc_playList"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/tv_listMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/tv_playRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_play"
            android:clickable="true"
            android:foreground="@drawable/custom_ripple_image"
            android:drawableLeft="@drawable/ic_baseline_playlist_play_24"
            app:layout_constraintTop_toBottomOf="@+id/im_back"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="12sp"

            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:paddingLeft="10dp"
                android:background="@drawable/custom_listmusic_bg"
            />
        <ImageView
            android:id="@+id/im_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_delete_24"
            android:clickable="true"
            android:foreground="@drawable/custom_ripple_image"
            app:layout_constraintTop_toBottomOf="@+id/im_back"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_ripple"


            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="15dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_playList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_playRandom"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/tv_no_data_reccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_recently_played_songs"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>