<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/playlist_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/tv_inputName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/enter_playlist_name"
                android:textColor="#3C3B3B"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <EditText
                android:id="@+id/edt_inputPlayList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="22dp"
                android:background="@drawable/custom_edt_addplaylist"
                android:ellipsize="end"
                android:hint="@string/play_list_name"
                android:maxLines="1"
                android:padding="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_inputName" />

            <TextView
                android:id="@+id/btn_cancle"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/custtom_textview_cancle"

                android:gravity="center"
                android:paddingHorizontal="@dimen/dimen_30dp"
                android:paddingVertical="@dimen/dimen_8dp"
                android:text="Cancle"

                android:textColor="@color/black"

                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"

                app:layout_constraintRight_toLeftOf="@+id/btn_ok"

                app:layout_constraintTop_toBottomOf="@+id/edt_inputPlayList" />

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/custtom_textview_done"
                android:gravity="center"
                android:paddingHorizontal="@dimen/dimen_30dp"
                android:paddingVertical="@dimen/dimen_8dp"
                android:text="OK"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/btn_cancle"
                app:layout_constraintRight_toRightOf="parent"


                app:layout_constraintTop_toBottomOf="@+id/edt_inputPlayList" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>