<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:background="@drawable/custom_rounded_dialog"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/backgroud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/im_backSong"
        android:layout_alignParentTop="true"
        android:alpha="0.6"
        android:scaleType="centerCrop" />


    <TextView
        android:id="@+id/music"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:text="@string/music"
        android:textColor="@color/white"

        android:textSize="@dimen/textsize_12sp" />

    <TextView
        android:id="@+id/nameSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/music"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/dap_an_cuoi_cung"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameSinger"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameSong"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:alpha="0.8"
        android:text="@string/quan_a_p"

        android:textColor="@color/white"

        android:textSize="@dimen/textsize_12sp" />

    <ImageView
        android:id="@+id/im_broadcast_mode"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/im_backSong"
        android:layout_alignBottom="@+id/im_backSong"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:background="@drawable/custom_ripple"
        android:padding="3dp"
        android:src="@drawable/ic_baseline_repeat_one_24" />

    <ImageView
        android:id="@+id/im_backSong"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameSinger"
        android:layout_marginLeft="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_toRightOf="@+id/im_broadcast_mode"

        android:foreground="@drawable/custom_ripple"


        android:src="@drawable/ic_baseline_skip_previous_24" />

    <ImageView
        android:id="@+id/im_playSong"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/im_backSong"
        android:layout_alignBottom="@+id/im_backSong"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_toEndOf="@+id/im_backSong"

        android:foreground="@drawable/custom_ripple"
        android:src="@drawable/baseline_pause_24" />

    <ImageView
        android:id="@+id/im_nextSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/im_backSong"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_toEndOf="@+id/im_playSong"
        android:foreground="@drawable/custom_ripple"
        android:src="@drawable/ic_baseline_skip_next_24" />

    <ImageView
        android:id="@+id/im_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/im_backSong"
        android:layout_alignBottom="@+id/im_backSong"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_toEndOf="@+id/im_nextSong"
        android:foreground="@drawable/custom_ripple"
        android:src="@drawable/ic_baseline_favorite_border_24" />


</RelativeLayout>