<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/im_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="5dp"
            android:background="@drawable/custom_ripple_image"
            app:layout_constraintLeft_toLeftOf="@id/rc_playList"
            android:layout_marginTop="10dp"
            />



        <TextView
            android:id="@+id/tv_listMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/play_list"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_playRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"


            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_listmusic_bg"
            android:clickable="true"
            android:foreground="@drawable/custom_ripple_image"
            android:textColor="@color/black"

            android:drawableLeft="@drawable/ic_baseline_playlist_play_24"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/random_play"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/im_back" />

        <TextView
            android:id="@+id/im_addPlayList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_listmusic_bg"
            android:clickable="true"
            android:foreground="@drawable/custom_ripple_image"
            android:textColor="@color/black"
            android:drawableRight="@drawable/ic_baseline_playlist_add_24"
            android:gravity="center"
            android:visibility="invisible"

            android:paddingLeft="10dp"
            android:text="@string/random_play"
            android:textSize="12sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/im_back"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_playList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_playRandom"
            app:spanCount="2" />


        <TextView
            android:id="@+id/tv_addPlayList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_addplaylist"
            android:foreground="@drawable/custom_ripple_image"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_baseline_add_22"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/create_playlists"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>